PR comments addressed